Project

General

Profile

Actions

Bug #21336

closed

"Cannot malloc during GC" on WASM

Bug #21336: "Cannot malloc during GC" on WASM

Added by k0kubun (Takashi Kokubun) over 1 year ago. Updated over 1 year ago.

Status:
Closed
Target version:
-
[ruby-core:122082]

Description

The patch for [Bug #21331] https://github.com/ruby/ruby/pull/13317 introduced a new bug for WASM build.

basictest/test.rb:array ...........................basictest/test.rb:53: [BUG] Cannot malloc during GC
ruby 3.5.0dev (2025-05-13T13:39:06Z pull/13317/merge 5e6d7a06ee) +PRISM [wasm32-wasi]

-- Control frame information -----------------------------------------------
c:0005 p:0002 s:0065 e:000064 METHOD basictest/test.rb:53
c:0004 p:0005 s:0061 e:000059 METHOD basictest/test.rb:68
c:0003 p:0068 s:0056 e:000055 METHOD basictest/test.rb:119
c:0002 p:8173 s:0048 E:000a00 EVAL   basictest/test.rb:889 [FINISH]
c:0001 p:0000 s:0003 E:0005a8 DUMMY  [FINISH]

-- Ruby level backtrace information ----------------------------------------
basictest/test.rb:889:in '<main>'
basictest/test.rb:119:in 'test_ok'
basictest/test.rb:68:in 'pass'
basictest/test.rb:53:in 'passed_string'

https://github.com/ruby/ruby/actions/runs/14998139079/job/42139552597

Actions

Also available in: PDF Atom