[Bug #21336] Stop using `rb_ensure` during GC for hash iteration

bb180b87b43c45e17ff49735a26d7a188d5c8396 introduced some `rb_ensure`
calls in `rb_hash_stlike_foreach{,with_replace}`. This caused
"Cannot malloc during GC" on Wasm because:
1. `rb_ensure` calls `xmalloc` on Wasm to allocate jump buffers
2. `rb_hash_stlike_foreach{,with_replace}` is called during GC to mark
   hash values

All `rb_hash_stlike_foreach{,with_replace}` calls during GC are known
not to raise exceptions, so we can safely use them without `rb_ensure`.
This commit adds `_no_ensure` variants of these functions and uses
them in the GC code to fix the Wasm issue.

Co-authored-by: Koichi Sasada <ko1@atdot.net>